--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -177,6 +177,12 @@ section {
     padding: 200px 20px 178px;
 }
 
+.welcome-2 {
+    padding-top: 170px;
+    padding-bottom: 170px;
+    background-color: #efefef;
+}
+
 .section-wrapper {
     width: 100%;
     max-width: 1280px;
